@@ -6,7 +6,7 @@ authors = [
 ]
 description = "Simple, configuration-driven backup software for servers and workstations"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 classifiers=[
     "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
