@@ -1,5 +1,5 @@
 [tox]
-env_list = py38,py39,py310,py311,py312
+env_list = py39,py310,py311,py312
 skip_missing_interpreters = True
 package = editable
 min_version = 4.0
